# faultline

./: .gitignore  README.md  pyproject.toml
docs/: ROADMAP.md  architecture.md
examples/: minimal_cli.py
src/faultline/: __init__.py  boundary.py  cli.py  diagnostics.py  exceptions.py  registry.py
tests/: test_boundary.py  test_diagnostics.py  test_exceptions.py  test_registry.py
