[project]
name = "faultline"
version = "0.1.0"
description = "A structured error-handling and diagnostics framework for CLI toolchains and CI pipelines."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Your Name", email = "you@example.com" }]
keywords = ["error-handling", "logging", "ci", "cli", "diagnostics", "exceptions", "pipelines"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Logging",
]
dependencies = [
    "pytest>=9.1.1",
]

[project.optional-dependencies]
retry = ["tenacity>=8.2"]
json-logging = ["orjson>=3.10"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/yourname/faultline"
Issues = "https://github.com/yourname/faultline/issues"

[project.scripts]
faultline = "faultline.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/faultline"]

[tool.ruff]
line-length = 119
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TRY", "ARG", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG001", "ANN"]  # test fixtures/params often intentionally unused

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=faultline --cov-report=term-missing"

[dependency-groups]
dev = [
    "pytest-cov>=7.1.0",
]
